--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - "example5.local:127.0.0.1"
       - "example6.local:127.0.0.1"
       - "example7.local:127.0.0.1"
+      - "symfony.local:127.0.0.1"
     networks:
       app_net:
         ipv4_address: 192.168.2.23
